[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/split_text_editor.gd" type="Script" id=1]
[ext_resource path="res://fonts/app.theme" type="Theme" id=2]

[node name="editor_container" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 35.0
size_flags_horizontal = 3
alignment = 2

[node name="open" type="Button" parent="buttons"]
margin_left = 936.0
margin_right = 976.0
margin_bottom = 35.0
theme = ExtResource( 2 )
text = "üìÅ"

[node name="close" type="Button" parent="buttons"]
margin_left = 984.0
margin_right = 1024.0
margin_bottom = 35.0
theme = ExtResource( 2 )
text = "‚úñ"

[node name="editor" type="TabContainer" parent="."]
margin_top = 43.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
tabs_visible = false

[node name="rich_text_label" type="RichTextLabel" parent="editor"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -16.0
margin_bottom = -85.0
focus_mode = 2
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_edit" type="TextEdit" parent="editor"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -16.0
margin_bottom = -69.0
readonly = true
fold_gutter = true
highlight_all_occurrences = true
smooth_scrolling = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="buttons/close" to="." method="_on_close_pressed"]
[connection signal="gui_input" from="editor/rich_text_label" to="." method="_on_rich_text_label_gui_input"]
[connection signal="focus_exited" from="editor/text_edit" to="." method="_on_text_edit_focus_exited"]
[connection signal="text_changed" from="editor/text_edit" to="." method="_on_text_edit_text_changed"]
